--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,14 @@ install:
     - pip install -r requirements.txt
     - pip install coverage
     - pip install coveralls
-    - pip install pytest-cov
+- pip install pytest-cov
+
+
+# command to run tests
 script:
-    py.test --cov-report= --cov=app tests/
+   - nosetests --with-coverage --cover-package=app
+   - coverage report
+
 
 after_success:
-- coveralls
+  - coveralls
