--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,17 @@
 language: python
 
 python:
-  - "3.6"
+    - "3.6"
 cache:
-  pip
+    pip
 
 install:
-  - pip install -r requirements.txt
-  - pip install coverage
-  - pip install coveralls
-  - pip install pytest-cov
-    
+    - pip install -r requirements.txt
+    - pip install coverage
+    - pip install coveralls
+    - pip install pytest-cov
 script:
-  - pytest 
+    py.test --cov-report= --cov=api tests/
 
 after_success:
-  - coveralls
+- coveralls
