--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ install:
     -pip install nose 
     
 script:
-  pytest
+    - pytest
     - nosetests -v --with-coverage --cover-package=api
 
 after_success:
