--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,16 @@
 language: python
 
 python:
-    - "3.6"
-cache:
-    pip
+- "3.6"
 
-before script:
-    - pip3 install -r requirements.txt
+cache:
+- pip
+
+before_script:
+- pip3 install -r requirements.txt
     
 script:
-    - pytest 
+- pytest 
 
 after_success:
-    - coveralls
+- coveralls
