--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_script:
 - pip3 install -r requirements.txt
     
 script:
-- pytest api/Tests/tests.py
+- py.test --cov=api/v1 api/Tests/tests.py
 
 after_success:
 - coveralls
