--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ certifi==2018.8.13
 chardet==3.0.4
 click==6.7
 colorama==0.3.9
-coverage==4.5.1
+coverage==4.0.3
 coveralls==1.3.0
 docopt==0.6.2
 Flask==1.0.2
@@ -27,7 +27,10 @@ pluggy==0.7.1
 py==1.5.4
 pylint==2.1.1
 pytest==3.7.1
+pytest-cov==2.5.1
+python-coveralls==2.9.1
 pytz==2018.5
+PyYAML==3.13
 requests==2.19.1
 six==1.11.0
 typed-ast==1.1.0
